# sember

./: .gitignore  Cargo.toml  README.md  install
.builds/: linux.yml
.github/workflows/: build.yml
assets/css/: cv.css  fonts.css  index.css  reset.css
src/: main.rs
views/: cv.twig  index.twig
views/partials/: head.twig  nav.twig
